--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="box_style"></div><!-- box_style -->
 
               <div class="liberty">
-                  <img src="img/fusion2.jpg" alt="missing"/>
+                  <img src="img/Fusion2.jpg" alt="missing"/>
                   <h4>The Statue Of Liberty Travel</h4>
                   <p>Qualitative ship it user story grok SpaceTeam waterfall is so 2000 and late quantitative vs.</p>
               </div><!-- liberty -->
