--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     In The World - Istunbul </h4>
                     <p>Venture capital food-truck minimum viable product ideate pitch deck experiential cortado affordances parallax</p>
                   </div>
-                 <img src="img/fusion2.jpg" alt="missing"/>
+                 <img src="img/Fusion2.jpg" alt="missing"/>
               </div><!-- liberty2 -->
 
               
@@ -154,7 +154,7 @@
                   <div class="product2"></div><!-- product2 -->
 
                 <div class="natural">
-                   <img src="img/fusion2.jpg" alt="">
+                   <img src="img/Fusion2.jpg" alt="">
                     <h4>The Best Natural Paradise - Shimla </h4>
                      <p>
                         Ship it integrate prototype fund human-centered design integrate big data convergence.
